# Haskell1

./: .project
.dist-buildwrapper/: Haskell1.cabal
.dist-buildwrapper/src/: .Main.hs.bwinfo  .Main.hs.bwusage  Main.hs
